--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="https://kit.fontawesome.com/021c9e3369.js" crossorigin="anonymous"></script>
     <title>Grammr</title>
   </head>
   <body>
